@startuml ("person")

entity "person.countries" as countries {
  + id SERIAL <<PK>>
  --
  name VARCHAR(32)
  alpha2 VARCHAR(2)
  alpha3 VARCHAR(3)
  status VARCHAR(32)
  created TIMESTAMP
  updated TIMESTAMP
}

entity "person.addresses" as addresses {
  + id UUID <<PK>>
  --
  country_id INT <<FK>>
  address VARCHAR(128)
  zip_code VARCHAR(32)
  city VARCHAR(32)
  state VARCHAR(32)
  created TIMESTAMP
  updated TIMESTAMP
  archived TIMESTAMP
}

entity "person.profiles" as profiles {
  + id UUID <<PK>>
  secret_key VARCHAR(32)
  --
  first_name VARCHAR(32)
  last_name VARCHAR(32)
  status VARCHAR(64)
  filled BOOLEAN
  address_id UUID <<FK>>
  created TIMESTAMP
  updated TIMESTAMP
  verified_at TIMESTAMP
  archived_at TIMESTAMP
}

entity "person.merchants" as merchants {
  + id UUID <<PK>>
  --
  profile_id UUID <<FK>>
  company_name VARCHAR(32)
  company_id VARCHAR(32)
  email VARCHAR(32)
  phone_number VARCHAR(32)
  status VARCHAR(32)
  filled BOOLEAN
  created TIMESTAMP
  updated TIMESTAMP
  verified_at TIMESTAMP
  archived_at TIMESTAMP
}

entity "person.merchant_members" as merchant_members {
  + id UUID <<PK>>
  --
  profile_id UUID <<FK>>
  merchant_id UUID <<FK>>
  member_role VARCHAR(32)
  status VARCHAR(32)
  created TIMESTAMP
  updated TIMESTAMP
}

entity "person.individuals" as individuals {
  + id UUID <<PK>>
  --
  profile_id UUID <<FK>>
  passport_number VARCHAR(32)
  phone_number VARCHAR(32)
  email VARCHAR(32)
  status VARCHAR(32)
  created TIMESTAMP
  updated TIMESTAMP
  verified_at TIMESTAMP
  archived_at TIMESTAMP
}

entity "person.verification_statuses" as verification_statuses {
  + id UUID <<PK>>
  --
  profile_id UUID <<FK>>
  profile_type VARCHAR(32)
  details VARCHAR(255)
  verification_status VARCHAR(32)
  created TIMESTAMP
  updated TIMESTAMP
}

entity "person.profile_history" as profile_history {
  + id UUID <<PK>>
  --
  profile_id UUID <<FK>>
  profile_type VARCHAR(32)
  reason VARCHAR(255)
  comment VARCHAR(255)
  changed_values VARCHAR(1024)
  created TIMESTAMP
}

entity "person.merchant_members_invitations" as merchant_members_invitations {
  + id UUID <<PK>>
  --
  merchant_id UUID <<FK>>
  first_name VARCHAR(32)
  last_name VARCHAR(32)
  email VARCHAR(32)
  status VARCHAR(32)
  created TIMESTAMP
  expires TIMESTAMP
}

countries ||--o{ addresses
addresses ||--|| profiles
profiles ||--|| merchants
merchants }o--o{ merchant_members
profiles ||--|| individuals
profiles ||--|| verification_statuses
profiles ||--o{ profile_history
merchants }o--o{ merchant_members_invitations

@enduml
